2007-08-06  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm
	  kahua-stale-proc(kahua-default-stale-proc now) return with 404
	  HTTP status,  and default error handler (kahua-default-error-proc
	  now) return with 500 HTTP status.

2007-07-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/persistence.scm
	  Arrange top level "make-kahua-collection" to be efficient,  and
	  use new let-keywords* form and drop transitional code.

2007-07-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: DIST
	  Add .svn directory to be excluded when ./DIST tgz, because
	  source repository moved from CVS to Subversion.

2007-07-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/server.scm
	  Now kahua-self-uri and kahua-self-uri-full always return a URI(path)
	  string which ends by #\/ if they have no arguments, and they
	  always return a URI(path) which doesn't end by #\/ if they have
	  one or more arguments.

2007-07-18  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: configure.ac, src/Makefile.in
	  Fix the problem that BSD make couldn't substitute version string
	  properly.

2007-07-14  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-keyserv.scm, src/kahua/session.scm
	  Now the connection between a worker process and kahua-keyserv
	  is persistent one.  This implementation assume that kahua-server
	  is a single thread program.

2007-07-05  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/server.scm
	  Add with-kahua-user/with-kahua-local-user.

	* Change: src/kahua/user.scm, test/user.scm
	  Add kahua-user? that check obj is a instance (kahua-current-user-class).

	* Change: src/kahua/server.scm
	  Now run-eval is invoked with context that has only session-state.
	  So we can easily simulate login session in kahua-shell.

2007-07-03  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: configurea.ac, cgi/Makefile.in
	  Add configure option --with-fastcgi-ext to specify extension of